unpackaged/main/default/objects/User/fields/Active_Approver__c.field-meta.xml
<CustomField>
    <fullName>Active_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-5441</description>
    <label>Active Approver</label>
    <type>Checkbox</type>
</CustomField>