unpackaged/main/default/objects/User/fields/Automatically_deactivated__c.field-meta.xml
<CustomField>
    <fullName>Automatically_deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically deactivated</label>
    <type>Checkbox</type>
</CustomField>