unpackaged/main/default/objects/User/fields/AWF_User__c.field-meta.xml
<CustomField>
    <fullName>AWF_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AWF User</label>
    <type>Checkbox</type>
</CustomField>