unpackaged/main/default/objects/User/fields/BoB_Country__c.field-meta.xml
<CustomField>
    <fullName>BoB_Country__c</fullName>
    <description>EPH-6329 BOB MGMT - Submit / Approve / Activate BOB</description>
    <label>BoB Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>UK</label>
            </value>
            <value>
                <fullName>77</fullName>
                <label>DE</label>
            </value>
            <value>
                <fullName>71</fullName>
                <label>FR</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>IT</label>
            </value>
            <value>
                <fullName>186</fullName>
                <label>ES</label>
            </value>
            <value>
                <fullName>163</fullName>
                <label>PL</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>IE</label>
            </value>
            <value>
                <fullName>193</fullName>
                <label>CH</label>
            </value>
            <value>
                <fullName>146</fullName>
                <label>NL</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>BE</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>AU</label>
            </value>
            <value>
                <fullName>168</fullName>
                <label>EEC</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>AT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>