unpackaged/main/default/objects/User/fields/CC_Country__c.field-meta.xml
<CustomField>
    <fullName>CC_Country__c</fullName>
    <description>Cost Center Country</description>
    <label>CC Country</label>
    <length>64</length>
    <type>Text</type>
</CustomField>