unpackaged/main/default/objects/User/fields/Check_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Check_User_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check User ID</label>
    <type>Text</type>
</CustomField>