unpackaged/main/default/objects/User/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>US-0009221 - [Ads 2020] Field &amp; Formulas for Revenue Recognition and Compliance</description>
    <label>Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0010 eBay, Inc. (US)</fullName>
            </value>
            <value>
                <fullName>0058 mobile.international GmbH</fullName>
            </value>
            <value>
                <fullName>0075 eBay Ltd. (UK)</fullName>
            </value>
            <value>
                <fullName>0111 eBay Marketplaces GmbH</fullName>
            </value>
            <value>
                <fullName>0314 eBay Intl Adv GmbH</fullName>
            </value>
            <value>
                <fullName>0315 eBay (UK) Ltd, Adv Grp DE</fullName>
            </value>
            <value>
                <fullName>0323 eBay UK Ltd. Branch France</fullName>
            </value>
            <value>
                <fullName>0324 eBay (UK) Ltd., Italian Branch</fullName>
            </value>
            <value>
                <fullName>0325 eBay (UK) Ltd., Australia Branch</fullName>
            </value>
            <value>
                <fullName>0062 eBay GmbH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>