unpackaged/main/default/objects/User/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <description>EPH-6931 Adjustments to Marketing Ticket Object &amp; User</description>
    <label>Competency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copy</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>Targeting</fullName>
            </value>
            <value>
                <fullName>Journey</fullName>
            </value>
            <value>
                <fullName>Scripting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>