unpackaged/main/default/objects/User/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>EPH-6560</description>
    <label>Cost Center</label>
    <length>20</length>
    <type>Text</type>
</CustomField>