unpackaged/main/default/objects/User/fields/Cost_Center_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_Overwrite__c</fullName>
    <inlineHelpText>EPH-6560</inlineHelpText>
    <label>Cost Center Overwrite</label>
    <length>20</length>
    <type>Text</type>
</CustomField>