unpackaged/main/default/objects/User/fields/Cost_Center_X_Charge__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_X_Charge__c</fullName>
    <formula>IF(NOT(ISBLANK( Cost_Center_Overwrite__c)), Cost_Center_Overwrite__c,Cost_Center__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Center X-Charge</label>
    <type>Text</type>
</CustomField>