unpackaged/main/default/objects/User/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>US-0009221 - [Ads 2020] Field &amp; Formulas for Revenue Recognition and Compliance</description>
    <formula>CASE( Company_Code__c ,
 &quot;0062 eBay GmbH&quot;, &quot;DE&quot;,
 &quot;0075 eBay Ltd. (UK)&quot;, &quot;UK&quot;,
 &quot;0325 eBay (UK) Ltd., Australia Branch&quot;, &quot;AU&quot;,
 &quot;0111 eBay Marketplaces GmbH&quot;, &quot;DE&quot;,
 &quot;0314 eBay Intl Adv GmbH&quot;, &quot;DE&quot;, 
 &quot;0323 eBay UK Ltd. Branch France&quot;,&quot;FR&quot;,
 &quot;0324 eBay (UK) Ltd., Italian Branch&quot;, &quot;IT&quot;
,&quot;#NA#&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>