unpackaged/main/default/objects/User/fields/cp__c.field-meta.xml
<CustomField>
    <fullName>cp__c</fullName>
    <formula>$User.Permission_Sets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cp</label>
    <type>Text</type>
</CustomField>