unpackaged/main/default/objects/User/fields/Customer_facing_eMail__c.field-meta.xml
<CustomField>
    <fullName>Customer_facing_eMail__c</fullName>
    <description>US-0009228 - [DE Pro-Trader] New &quot;Customer facing eMail&quot; field to be created for DE GCX Team</description>
    <inlineHelpText>Direct contact email address displayed to cohort seller in the Marketing Cloud Seller Landing page and emails.</inlineHelpText>
    <label>Customer facing eMail</label>
    <type>Email</type>
</CustomField>