unpackaged/main/default/objects/User/fields/EBH_Date_of_1st_Notification__c.field-meta.xml
<CustomField>
    <fullName>EBH_Date_of_1st_Notification__c</fullName>
    <label>Date of 1st Notification</label>
    <type>Date</type>
</CustomField>