unpackaged/main/default/objects/User/fields/EBH_X2nd_Notification_sent__c.field-meta.xml
<CustomField>
    <fullName>EBH_X2nd_Notification_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2nd Notification sent</label>
    <type>Checkbox</type>
</CustomField>