unpackaged/main/default/objects/User/fields/Federated_Login__c.field-meta.xml
<CustomField>
    <fullName>Federated_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0010903 - [Add User] Allow DE Deals Users to add others Contacts to the Seller Portal</description>
    <inlineHelpText>Indicates a User that logs in to Seller Portal using Experience Cloud Username and password</inlineHelpText>
    <label>Federated Login</label>
    <type>Checkbox</type>
</CustomField>