unpackaged/main/default/objects/User/fields/Final_Notification__c.field-meta.xml
<CustomField>
    <fullName>Final_Notification__c</fullName>
    <description>EPH-5578</description>
    <label>Final Notification</label>
    <type>DateTime</type>
</CustomField>