unpackaged/main/default/objects/User/fields/Financial_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Financial_Analyst__c</fullName>
    <label>Financial Analyst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>