unpackaged/main/default/objects/User/fields/First_Notification__c.field-meta.xml
<CustomField>
    <fullName>First_Notification__c</fullName>
    <description>EPH-5578</description>
    <label>First Notification</label>
    <type>DateTime</type>
</CustomField>