unpackaged/main/default/objects/User/fields/Hide_SP_Coupons__c.field-meta.xml
<CustomField>
    <fullName>Hide_SP_Coupons__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>US-0010785 - Refactor Coupon Seller object to support standard search</description>
    <label>Hide SP Coupons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>