unpackaged/main/default/objects/User/fields/Hide_SP_Deals__c.field-meta.xml
<CustomField>
    <fullName>Hide_SP_Deals__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>US-0012000 - Restrict Access to Deals for Coupon only Sellers</description>
    <label>Hide SP Deals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>