unpackaged/main/default/objects/User/fields/Last_NPS_Survey_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_NPS_Survey_Send_Date__c</fullName>
    <description>Will be updated everytime we send a NPS survey to user</description>
    <label>Last NPS Survey Send Date</label>
    <type>DateTime</type>
</CustomField>