unpackaged/main/default/objects/User/fields/Legacy_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SFDC_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy SFDC ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>