unpackaged/main/default/objects/User/fields/manager_email__c.field-meta.xml
<CustomField>
    <fullName>manager_email__c</fullName>
    <description>US-0009269 - Retrieve data from OCIO platform</description>
    <inlineHelpText>Manager email id of user</inlineHelpText>
    <label>manager email</label>
    <type>Email</type>
</CustomField>