unpackaged/main/default/objects/User/fields/Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets__c</fullName>
    <description>Copy permission sets from Ticket</description>
    <label>Permission Sets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>