unpackaged/main/default/objects/User/fields/PostChatterPortal__c.field-meta.xml
<CustomField>
    <fullName>PostChatterPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to allow User Portal to post in Feeditem if it set to true.</description>
    <inlineHelpText>Use to allow User Portal to post in Feeditem if it set to true.</inlineHelpText>
    <label>PostChatterPortal</label>
    <type>Checkbox</type>
</CustomField>