unpackaged/main/default/objects/User/fields/Profit_Center_L1__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center_L1__c</fullName>
    <label>Profit Center L1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>