unpackaged/main/default/objects/User/fields/Profit_Center_L2__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center_L2__c</fullName>
    <label>Profit Center L2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>