unpackaged/main/default/objects/User/fields/Reactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Reactivated_Date__c</fullName>
    <description>EPH-5578</description>
    <label>Reactivated Date</label>
    <type>DateTime</type>
</CustomField>