unpackaged/main/default/objects/User/fields/Second_Notification__c.field-meta.xml
<CustomField>
    <fullName>Second_Notification__c</fullName>
    <description>US-0008327 - [Dev Only] - Finalize user deactivation process</description>
    <inlineHelpText>Second time that system sent the deactivated notification to user.</inlineHelpText>
    <label>Second Notification</label>
    <type>DateTime</type>
</CustomField>