unpackaged/main/default/objects/User/fields/Trailhead_Access_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Access_Assignment__c</fullName>
    <label>Trailhead Access Assignment</label>
    <type>TextArea</type>
</CustomField>