unpackaged/main/default/objects/User/fields/User_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>User_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0011343 - Adding User to Existing Seller Portal Group. NOT USED</description>
    <inlineHelpText>Flag when Seller unlink from Group.</inlineHelpText>
    <label>User Deactivated</label>
    <type>Checkbox</type>
</CustomField>