unpackaged/main/default/objects/User/validationRules/Active_Approver_Flag.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Approver_Flag</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Active_Approver__c,
    IsActive =False
    )</errorConditionFormula>
    <errorMessage>This is an Active Approver Flag... Please remove from Approval Matrix or Hierachy first</errorMessage>
</ValidationRule>