unpackaged/main/default/objects/User/listViews/Active_Ads_EU_Users.listView-meta.xml
<ListView>
    <fullName>Active_Ads_EU_Users</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active_Approver__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Standard Ads EU User Profile</value>
    </filters>
    <label>Active Ads EU Users</label>
    <language>en_US</language>
</ListView>