unpackaged/main/default/objects/User/listViews/Active_Users_FRITES.listView-meta.xml
<ListView>
    <fullName>Active_Users_FRITES</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Profit_Center_L2__c</field>
        <operation>equals</operation>
        <value>Italy,Spain,France,EU BCH &amp; PIN</value>
    </filters>
    <label>Active Users FRITES</label>
    <language>en_US</language>
</ListView>