unpackaged/main/default/objects/User/listViews/Ads_Users.listView-meta.xml
<ListView>
    <fullName>Ads_Users</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>Legacy_SFDC_ID__c</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>Cost_Center__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>IS_FROZEN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>dsfs__DSProSFUsername__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Standard Ads User Profile</value>
    </filters>
    <filters>
        <field>Legacy_SFDC_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Ads Users</label>
    <language>en_US</language>
</ListView>