unpackaged/main/default/objects/User/listViews/Deals_User.listView-meta.xml
<ListView>
    <fullName>Deals_User</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Deals User Profile</value>
    </filters>
    <label>Deals User</label>
    <language>en_US</language>
</ListView>